<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 功能设置组 -->
    <PreferenceCategory 
        android:title="@string/pref_category_functional"
        android:icon="@drawable/ic_settings_functional"
        app:iconSpaceReserved="true">
        
        <SwitchPreferenceCompat
            android:key="key_auto_click"
            android:title="@string/pref_auto_click_title"
            android:summary="@string/pref_auto_click_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="true" />
            
        <SwitchPreferenceCompat
            android:key="key_auto_return"
            android:title="@string/pref_auto_return_title"
            android:summary="@string/pref_auto_return_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>
    
    <!-- 消息检查设置组 -->
    <PreferenceCategory 
        android:title="@string/pref_category_message_check"
        android:icon="@drawable/ic_settings_message"
        app:iconSpaceReserved="true">
        
        <EditTextPreference
            android:key="key_check_interval"
            android:title="@string/pref_check_interval_title"
            android:summary="@string/pref_check_interval_summary"
            android:defaultValue="1000"
            android:inputType="number"
            android:persistent="false"
            app:iconSpaceReserved="true" />
            
        <SwitchPreferenceCompat
            android:key="key_wifi_only"
            android:title="@string/pref_wifi_only_title"
            android:summary="@string/pref_wifi_only_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>
    
    <!-- 自动返回设置组 -->
    <PreferenceCategory 
        android:title="@string/pref_category_auto_return"
        android:icon="@drawable/ic_settings_return"
        app:iconSpaceReserved="true">
        
        <EditTextPreference
            android:key="key_return_delay"
            android:title="@string/pref_return_delay_title"
            android:summary="@string/pref_return_delay_summary"
            android:defaultValue="2000"
            android:inputType="number"
            android:persistent="false"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>
    
    <!-- 高级设置组 -->
    <PreferenceCategory 
        android:title="@string/pref_category_advanced"
        android:icon="@drawable/ic_settings_advanced"
        app:iconSpaceReserved="true">
        
        <SwitchPreferenceCompat
            android:key="key_keep_alive"
            android:title="@string/pref_keep_alive_title"
            android:summary="@string/pref_keep_alive_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="true" />
            
        <Preference
            android:key="key_reset_stats"
            android:title="@string/pref_reset_stats_title"
            android:summary="@string/pref_reset_stats_summary"
            app:iconSpaceReserved="true" />
            
        <Preference
            android:key="key_view_logs"
            android:title="@string/pref_view_logs_title"
            android:summary="@string/pref_view_logs_summary"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>
    
    <!-- 语言设置组 -->
    <PreferenceCategory
        android:title="@string/pref_category_language"
        android:icon="@drawable/ic_settings_language"
        app:iconSpaceReserved="true">

        <ListPreference
            android:defaultValue="system"
            android:entries="@array/pref_language_entries"
            android:entryValues="@array/pref_language_values"
            android:key="language"
            android:title="@string/pref_language_title"
            android:summary="@string/pref_language_summary"
            app:iconSpaceReserved="true" />

    </PreferenceCategory>
    
    <!-- 关于应用组 -->
    <PreferenceCategory 
        android:title="@string/pref_category_about"
        android:icon="@drawable/ic_settings_info"
        app:iconSpaceReserved="true">
        
        <Preference
            android:key="key_about"
            android:title="@string/about_title"
            app:iconSpaceReserved="true" />
    </PreferenceCategory>

</PreferenceScreen> 